# httpx2_auth

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/utils/: requirements_ci.txt
.github/workflows/: cd_release.yml  ci_tests.yml  test.yml
httpx2_auth/: __init__.py  _authentication.py  _aws.py  _errors.py  testing.py  version.py
httpx2_auth/_oauth2/: authentication_responses_server.py  authorization_code.py  authorization_code_pkce.py  browser.py  client_credentials.py  common.py  implicit.py  resource_owner_password.py  tokens.py
tests/api_key/: test_api_key.py  test_api_key_async.py  test_api_key_sync.py
tests/aws_signature_v4/: test_aws4auth.py  test_aws4auth_async.py  test_aws4auth_sync.py
tests/basic_auth/: test_basic_async.py  test_basic_sync.py
tests/features/multi_auth/: test_add_operator_async.py  test_add_operator_sync.py  test_and_operator_async.py  test_and_operator_sync.py
tests/features/pytest_fixture/: test_testing_token_mock_async.py  test_testing_token_mock_sync.py
tests/features/token_cache/: test_json_token_file_cache.py
tests/features/token_cache/authorization_code/: test_testing_oauth2_authorization_code_async.py  test_testing_oauth2_authorization_code_sync.py
tests/features/token_cache/implicit/: test_testing_oauth2_implicit_async.py  test_testing_oauth2_implicit_sync.py
tests/oauth2/authorization_code/: test_oauth2_authorization_code.py  test_oauth2_authorization_code_async.py  test_oauth2_authorization_code_sync.py
tests/oauth2/authorization_code/okta/: test_oauth2_authorization_code_okta.py  test_oauth2_authorization_code_okta_async.py  test_oauth2_authorization_code_okta_sync.py
tests/oauth2/authorization_code/wakatime/: test_oauth2_authorization_code_wakatime.py  test_oauth2_authorization_code_wakatime_async.py  test_oauth2_authorization_code_wakatime_sync.py
tests/oauth2/authorization_code_pkce/: conftest.py  test_oauth2_authorization_code_pkce.py  test_oauth2_authorization_code_pkce_async.py  test_oauth2_authorization_code_pkce_sync.py
tests/oauth2/authorization_code_pkce/okta/: test_oauth2_authorization_code_pkce_okta.py  test_oauth2_authorization_code_pkce_okta_async.py  test_oauth2_authorization_code_pkce_okta_sync.py
tests/oauth2/client_credential/: test_oauth2_client_credential.py  test_oauth2_client_credential_async.py  test_oauth2_client_credential_sync.py
tests/oauth2/client_credential/okta/: test_oauth2_client_credential_okta.py  test_oauth2_client_credential_okta_async.py  test_oauth2_client_credential_okta_sync.py
tests/oauth2/implicit/: test_oauth2_implicit.py  test_oauth2_implicit_async.py  test_oauth2_implicit_sync.py
tests/oauth2/implicit/azure_ad/: test_oauth2_implicit_azure_active_directory.py  test_oauth2_implicit_id_token_azure_active_directory.py
tests/oauth2/implicit/okta/: test_oauth2_implicit_id_token_okta.py  test_oauth2_implicit_okta.py
tests/oauth2/resource_owner_password/: test_oauth2_resource_owner_password.py  test_oauth2_resource_owner_password_async.py  test_oauth2_resource_owner_password_sync.py
tests/oauth2/resource_owner_password/okta/: test_oauth2_resource_owner_password_okta.py  test_oauth2_resource_owner_password_okta_async.py  test_oauth2_resource_owner_password_okta_sync.py
